Fix ALB priority string values

--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -80,7 +80,7 @@ Resources:
           Values:
             - audiogram.*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   AudiogramALBHTTPHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
@@ -92,7 +92,7 @@ Resources:
           Values:
             - audiogram.*
       ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   # ECS Service
   AudiogramTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
