--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -90,7 +90,7 @@ Resources:
           Values:
             - castle.*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   CastleALBHTTPHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
@@ -102,7 +102,7 @@ Resources:
           Values:
             - castle.*
       ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   # ECS Service
   CastleTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
