--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -92,7 +92,7 @@ Resources:
           Values:
             - play.*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   PlayALBHTTPHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
@@ -104,7 +104,7 @@ Resources:
           Values:
             - play.*
       ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   # ECS Service
   PlayTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
