--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -94,7 +94,7 @@ Resources:
           Values:
             - !Sub ${AppName}.*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   ALBHTTPHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
@@ -106,7 +106,7 @@ Resources:
           Values:
             - !Sub ${AppName}.*
       ListenerArn: !Ref PlatformALBHTTPListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 00]]
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   # CloudWatch Alarms
   ALBTargetGroup500Alarm:
     Type: "AWS::CloudWatch::Alarm"
