Add health check to default ALB target group

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -49,6 +49,9 @@ Resources:
   PlatformALBDefaultTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
+      HealthCheckIntervalSeconds: 10
+      HealthyThresholdCount: 3
+      HealthCheckPath: "/ecs-health-check"
       Name: !Sub default-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
