Add certs for dovetail

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -21,6 +21,8 @@ Resources:
           DomainName: !Sub "*.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
       SubjectAlternativeNames:
         - "*.prx.org"
+        - "*.prxu.org"
+        - "*.dovetail.prxu.org"
         - "*.prx.tech"
         - "*.staging.prx.tech"
         - !Sub "*.cdn.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
