One dovetail per instance for now

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -167,6 +167,8 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
+      PlacementConstraints:
+        Type: "distinctInstance"
       # TODO: waaaaaaaay more in prod
       DesiredCount: 2
       LoadBalancers:
