--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -168,7 +168,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       PlacementConstraints:
-        Type: "distinctInstance"
+        - Type: "distinctInstance"
       LoadBalancers:
         - ContainerName: !FindInMap [Shared, Container, name]
           ContainerPort: 8080
