Add desired count back in; curse AWS docs

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -169,6 +169,8 @@ Resources:
         MinimumHealthyPercent: 50
       PlacementConstraints:
         - Type: "distinctInstance"
+      # TODO: why do you hate me, cloudformation?
+      DesiredCount: 2
       LoadBalancers:
         - ContainerName: !FindInMap [Shared, Container, name]
           ContainerPort: 8080
