--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -446,37 +446,37 @@ Resources:
   ##############################################################################
   #### DOVETAIL ################################################################
   ##############################################################################
-  # DovetailStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   DependsOn: ECSClusterStack
-  #   Properties:
-  #     NotificationARNs:
-  #       - Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-  #     Parameters:
-  #       VPC: !GetAtt VPCStack.Outputs.VPC
-  #       VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-  #       VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-  #       VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
-  #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-  #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
-  #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-  #       OpsDebugMessagesSnsTopicArn:
-  #         Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-  #       OpsErrorMessagesSnsTopicArn:
-  #         Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsBase:
-  #           Fn::ImportValue:
-  #             !Sub "${SecretsStackName}-SecretsBaseRegion"
-  #       DovetailEcrImageTag: !Ref DovetailEcrImageTag
-  #       DovetailSecretsVersion: !Ref DovetailSecretsVersion
-  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/dovetail.prx.org.yml"]]
-  #     TimeoutInMinutes: "5"
+  DovetailStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: ECSClusterStack
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+      Parameters:
+        VPC: !GetAtt VPCStack.Outputs.VPC
+        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
+        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        OpsDebugMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EcrRegion: !Ref EcrRegion
+        SecretsBase:
+            Fn::ImportValue:
+              !Sub "${SecretsStackName}-SecretsBaseRegion"
+        DovetailEcrImageTag: !Ref DovetailEcrImageTag
+        DovetailSecretsVersion: !Ref DovetailSecretsVersion
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/dovetail.prx.org.yml"]]
+      TimeoutInMinutes: "5"
 Outputs:
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
@@ -506,9 +506,9 @@ Outputs:
   FeederHostedZoneDNSName:
     Description: Domain name for feeder app
     Value: !GetAtt FeederStack.Outputs.HostedZoneDNSName
-  # DovetailHostedZoneDNSName:
-  #   Description: Domain name for dovetail app
-  #   Value: !GetAtt DovetailStack.Outputs.HostedZoneDNSName
+  DovetailHostedZoneDNSName:
+    Description: Domain name for dovetail app
+    Value: !GetAtt DovetailStack.Outputs.HostedZoneDNSName
   # CmsHostedZoneDNSName:
   #   Description: Domain name for CMS app
   #   Value: !GetAtt CmsStack.Outputs.HostedZoneDNSName
