Add custom domain for CI API

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -490,6 +490,12 @@ Resources:
       Description: "Production stage"
       RestApiId: !Ref RestApi
       DeploymentId: !Ref RestApiDeployment
+  # API Gatewat Domains
+  RestApiDomainName:
+    Type: "AWS::ApiGateway::DomainName"
+    Properties:
+      CertificateArn: !Ref CiCertificate
+      DomainName: !Sub "api.${AWS::Region}.${AWS::StackName}.prx.tech"
   # Lambda Permissions for API Gateway
   GitHubWebhookRequestPostMethodInvokeFunctionPermission:
     Type: "AWS::Lambda::Permission"
