--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -552,4 +552,4 @@ Resources:
       TimeoutInMinutes: 16
 Outputs:
   GitHubWebhookEndpointUrl:
-    Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiProdStage}/v1/github/webhook"
+    Value: !Sub "https://${RestApiDomainName}/${RestApiProdStage}/v1/github/webhook"
