Add a radiotopia wildcard cert

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -33,7 +33,24 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub "${EnvironmentType} ${VPC} wildcard"
+  RadiotopiaWildcardCertificate:
+    Type: "AWS::CertificateManager::Certificate"
+    Properties:
+      DomainName: *.radiotopia.fm
+      DomainValidationOptions:
+        - ValidationDomain: radiotopia.fm
+          DomainName: *.radiotopia.fm
+      SubjectAlternativeNames:
+        - "*.radiotopia.com"
+      Tags:
+        - Key: Project
+          Value: radiotopia.fm
+        - Key: Name
+          Value: radiotopia.fm/com wildcard
 Outputs:
   WildcardCertificateArn:
     Description: The ARN for the wildcard certificate
     Value: !Ref VpcWildcardCertificate
+  RadiotopiaCertificateArn:
+    Description: The ARN for the radiotopia wildcard certificate
+    Value: !Ref RadiotopiaWildcardCertificate
