Put domains in quotes

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -36,10 +36,10 @@ Resources:
   RadiotopiaWildcardCertificate:
     Type: "AWS::CertificateManager::Certificate"
     Properties:
-      DomainName: *.radiotopia.fm
+      DomainName: "*.radiotopia.fm"
       DomainValidationOptions:
-        - ValidationDomain: radiotopia.fm
-          DomainName: *.radiotopia.fm
+        - ValidationDomain: "radiotopia.fm"
+          DomainName: "*.radiotopia.fm"
       SubjectAlternativeNames:
         - "*.radiotopia.com"
       Tags:
