Add CloudFront distribution for media.radiotopia.fm

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a wildcard ACM certificate for the standard VPC created by the root
-  stack (eg *.vpc-af124354.prx.tech)
+  stack (eg *.vpc-af124354.prx.tech), as well as various other certificates
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
 Parameters:
