--- a/stacks/media.radiotopia.fm.yml
+++ b/stacks/media.radiotopia.fm.yml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a CloudFront distribution for media.radiotopia.fm, which is backed by
-  and S3 bucket
+  an S3 bucket
 Parameters:
   RadiotopiaCertificateArn:
     Type: String
