Add AAAA Alias records for CloudFront distributions

--- a/stacks/media.radiotopia.fm.yml
+++ b/stacks/media.radiotopia.fm.yml
@@ -49,3 +49,8 @@ Resources:
           AliasTarget:
             DNSName: !GetAtt CloudFrontDistribution.DomainName
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: media2.radiotopia.fm
+          AliasTarget:
+            DNSName: !GetAtt CloudFrontDistribution.DomainName
+            HostedZoneId: Z2FDTNDATAQYW2
