--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -172,6 +172,11 @@ Resources:
           AliasTarget:
             DNSName: !GetAtt PlayCloudFrontDistribution.DomainName
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub "play.cdn.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
+          AliasTarget:
+            DNSName: !GetAtt PlayCloudFrontDistribution.DomainName
+            HostedZoneId: Z2FDTNDATAQYW2
   # CloudFront
   PlayCloudFrontDistribution:
     Type: "AWS::CloudFront::Distribution"
