--- a/stacks/radio.radiotopia.fm.yml
+++ b/stacks/radio.radiotopia.fm.yml
@@ -56,3 +56,8 @@ Resources:
           AliasTarget:
             DNSName: !GetAtt CloudFrontDistribution.DomainName
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: radio2.radiotopia.fm
+          AliasTarget:
+            DNSName: !GetAtt CloudFrontDistribution.DomainName
+            HostedZoneId: Z2FDTNDATAQYW2
