--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -170,27 +170,26 @@ Resources:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/load-balancers.yml"]]
       TimeoutInMinutes: "5"
-  MediaRadiotopiaFmStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-      Parameters:
-        RadiotopiaCertificateArn: !GetAtt CertificateStack.Outputs.RadiotopiaCertificateArn
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/media.radiotopia.fm.yml"]]
-      TimeoutInMinutes: "15"
-  RadioRadiotopiaFmStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-      Parameters:
-        RadiotopiaCertificateArn: !GetAtt CertificateStack.Outputs.RadiotopiaCertificateArn
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/radio.radiotopia.fm.yml"]]
-      TimeoutInMinutes: "15"
-  ##############################################################################
+  # MediaRadiotopiaFmStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #     Parameters:
+  #       RadiotopiaCertificateArn: !GetAtt CertificateStack.Outputs.RadiotopiaCertificateArn
+  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/media.radiotopia.fm.yml"]]
+  #     TimeoutInMinutes: "15"
+  # RadioRadiotopiaFmStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #     Parameters:
+  #       RadiotopiaCertificateArn: !GetAtt CertificateStack.Outputs.RadiotopiaCertificateArn
+  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/radio.radiotopia.fm.yml"]]
+  #     TimeoutInMinutes: "15"
   #### FOUROHFOUR ##############################################################
   ##############################################################################
   FourohfourStack:
