Remove legacy code

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -191,7 +191,6 @@ Resources:
   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/radio.radiotopia.fm.yml"]]
   #     TimeoutInMinutes: "15"
   #### FOUROHFOUR ##############################################################
-  ##############################################################################
   FourohfourStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -208,9 +207,7 @@ Resources:
         FourohfourEcrImageTag: !Ref FourohfourEcrImageTag
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/fourohfour.prx.org.yml"]]
       TimeoutInMinutes: "5"
-  ##############################################################################
   #### PUBLISH #################################################################
-  ##############################################################################
   PublishStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -245,9 +242,7 @@ Resources:
         PublishSecretsVersion: !Ref PublishSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/publish.prx.org.yml"]]
       TimeoutInMinutes: "5"
-  ##############################################################################
   #### CASTLE ##################################################################
-  ##############################################################################
   CastleStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -282,9 +277,7 @@ Resources:
         CastleSecretsVersion: !Ref CastleSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
       TimeoutInMinutes: "5"
-  ##############################################################################
   #### AUDIOGRAM ###############################################################
-  ##############################################################################
   AudiogramStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -338,9 +331,7 @@ Resources:
   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
   #     TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/upload.prx.org/${UploadGitCommit}.zip"
   #     TimeoutInMinutes: "5"
-  ##############################################################################
   #### PLAY ####################################################################
-  ##############################################################################
   PlayStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -376,9 +367,7 @@ Resources:
         PlaySecretsVersion: !Ref PlaySecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/play.prx.org.yml"]]
       TimeoutInMinutes: "5"
-  ##############################################################################
   #### CRIER ###################################################################
-  ##############################################################################
   CrierStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -419,9 +408,7 @@ Resources:
         HealthCheckPath: "/api/v1"
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
       TimeoutInMinutes: "5"
-  ##############################################################################
-  #### FEEDER ###################################################################
-  ##############################################################################
+  #### FEEDER ##################################################################
   FeederStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -462,9 +449,7 @@ Resources:
         HealthCheckPath: "/api/v1"
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
       TimeoutInMinutes: "5"
-  ##############################################################################
   #### DOVETAIL ################################################################
-  ##############################################################################
   DovetailStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -528,102 +513,3 @@ Outputs:
   DovetailHostedZoneDNSName:
     Description: Domain name for dovetail app
     Value: !GetAtt DovetailStack.Outputs.HostedZoneDNSName
-  # CmsHostedZoneDNSName:
-  #   Description: Domain name for CMS app
-  #   Value: !GetAtt CmsStack.Outputs.HostedZoneDNSName
-
-##### OLD ######
-
-#   ##############################################################################
-#   ## SHARED ENVs ###############################################################
-#   ##############################################################################
-#   EnvCmsHost:
-#     Type: String
-#   EnvPlayHost:
-#     Type: String
-#   EnvIdHost:
-#     Type: String
-#   EnvFeederHost:
-#     Type: String
-#   EnvMetaHost:
-#     Type: String
-#   EnvPrxHost:
-#     Type: String
-#   ##############################################################################
-#   ##############################################################################
-#   ##############################################################################
-#   AudiogramEcrImageTag:
-#     Type: String
-#   CmsAudioLambdaZipName:
-#     Type: String
-#   CmsImageLambdaZipName:
-#     Type: String
-#   UploadLambdaZipName:
-#     Type: String
-#   PRXUploadAccessKey:
-#     Type: String
-# Resources:
-#   # CmsStack:
-#   #   Type: "AWS::CloudFormation::Stack"
-#   #   DependsOn: ECSClusterStack
-#   #   Properties:
-#   #     NotificationARNs:
-#   #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSnsTopicArn
-#   #     Parameters:
-#   #       VPC: !GetAtt VPCStack.Outputs.VPC
-#   #       VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-#   #       VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-#   #       VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
-#   #       RootStackName: !Ref AWS::StackName
-#   #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-#   #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
-#   #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-#   #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-#   #       OpsDebugMessagesSnsTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSnsTopicArn
-#   #       EcrRegion: !Ref EcrRegion
-#   #       CmsECRImageTag: !Ref CmsECRImageTag
-#   #       CmsEnvAwsAccessKeyId: !Ref CmsEnvAwsAccessKeyId
-#   #       CmsEnvAwsBucket: !Ref CmsEnvAwsBucket
-#   #       CmsEnvAwsRegion: !Ref CmsEnvAwsRegion
-#   #       CmsEnvAwsSecretAccessKey: !Ref CmsEnvAwsSecretAccessKey
-#   #       EnvCmsHost: !Ref EnvCmsHost
-#   #       CmsEnvDatabasePoolSize: !Ref CmsEnvDatabasePoolSize
-#   #       CmsEnvDbEnvMysqlDatabase: !Ref CmsEnvDbEnvMysqlDatabase
-#   #       CmsEnvDbEnvMysqlPassword: !Ref CmsEnvDbEnvMysqlPassword
-#   #       CmsEnvDbEnvMysqlUser: !Ref CmsEnvDbEnvMysqlUser
-#   #       CmsEnvDbPort3306TcpAddr: !Ref CmsEnvDbPort3306TcpAddr
-#   #       CmsEnvDbPort3306TcpPort: !Ref CmsEnvDbPort3306TcpPort
-#   #       EnvFeederHost: !Ref EnvFeederHost
-#   #       EnvIdHost: !Ref EnvIdHost
-#   #       CmsEnvMemcacheServers: !Ref CmsEnvMemcacheServers
-#   #       EnvMetaHost: !Ref EnvMetaHost
-#   #       CmsEnvMysqlAllowEmptyPassword: !Ref CmsEnvMysqlAllowEmptyPassword
-#   #       CmsEnvNewRelicKey: !Ref CmsEnvNewRelicKey
-#   #       CmsEnvNewRelicName: !Ref CmsEnvNewRelicName
-#   #       EnvPrxHost: !Ref EnvPrxHost
-#   #       CmsEnvPrxSecret: !Ref CmsEnvPrxSecret
-#   #       CmsEnvPublicAssetSecret: !Ref CmsEnvPublicAssetSecret
-#   #       CmsEnvRailsEnv: !Ref CmsEnvRailsEnv
-#   #       CmsEnvRailsSecretKey: !Ref CmsEnvRailsSecretKey
-#   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms.prx.org/cms.prx.org.yml"]]
-#   #     TimeoutInMinutes: "5"
-#   # CmsAudioLambdaStack:
-#   #   Type: "AWS::CloudFormation::Stack"
-#   #   Properties:
-#   #     NotificationARNs:
-#   #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSnsTopicArn
-#   #     Parameters:
-#   #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-CodeBucket"]]
-#   #       LambdaFunctionCodeS3Key: !Ref CmsAudioLambdaZipName
-#   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
-#   #     TimeoutInMinutes: "5"
-#   # CmsImageLambdaStack:
-#   #   Type: "AWS::CloudFormation::Stack"
-#   #   Properties:
-#   #     NotificationARNs:
-#   #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSnsTopicArn
-#   #     Parameters:
-#   #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-CodeBucket"]]
-#   #       LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
-#   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
-#   #     TimeoutInMinutes: "5"
