Allow UDP, and set hostnames

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -34,7 +34,7 @@ Resources:
     Properties:
       CidrBlock: 10.0.0.0/16
       EnableDnsSupport: true
-      EnableDnsHostnames: false
+      EnableDnsHostnames: true
       InstanceTenancy: default
       Tags:
         - Key: Project
@@ -147,6 +147,30 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 101
+  InboundHTTPSNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: false
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 443
+        To: 443
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 110
+  InboundHTTPNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: false
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 80
+        To: 80
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 111
   InboundSSHNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
@@ -159,6 +183,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 200
+  InboundSSHNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: false
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 210
   InboundReturnTrafficNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
@@ -171,6 +207,18 @@ Resources:
       Protocol: 6 # TCP
       RuleAction : allow
       RuleNumber : 500
+  InboundReturnTrafficNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: false
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 1024
+        To: 65535
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 510
   OutboudTrafficNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
