More frequent cleanup

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -250,6 +250,7 @@ Resources:
               command: !Sub |
                 #!/bin/bash
                 echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
+                echo ECS_ENGINE_TASK_CLEANUP_WAIT_DURATION=10m >> /etc/ecs/ecs.config
           files:
             "/etc/cfn/cfn-hup.conf":
               content: !Sub |
