--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -251,6 +251,8 @@ Resources:
                 #!/bin/bash
                 echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
                 echo ECS_ENGINE_TASK_CLEANUP_WAIT_DURATION=10m >> /etc/ecs/ecs.config
+            02_cloudwatch_disk_usage:
+              command: "(crontab -uroot -l 2> /dev/null; echo '* * * * * /root/cwdiskusage.sh') | crontab -u root -"
           files:
             "/etc/cfn/cfn-hup.conf":
               content: !Sub |
@@ -267,6 +269,34 @@ Resources:
                 path=Resources.ECSClusterASGLaunchConfiguration.Metadata.AWS::CloudFormation::Init
                 action=/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource ECSClusterASGLaunchConfiguration --region ${AWS::Region}
                 runas=root
+            "/root/cwdiskusage.sh":
+              content: |
+                #!/bin/bash
+                if [ ! -f /usr/bin/aws ]; then yum -qy -d 0 -e 0 install aws-cli; fi
+                if [ ! -f /usr/bin/bc ]; then yum -qy -d 0 -e 0 install bc; fi
+                if [ ! -f /usr/bin/jq ]; then yum -qy -d 0 -e 0 install jq; fi
+                AWSREGION=`curl -ss http://169.254.169.254/latest/dynamic/instance-identity/document | jq -r .region`
+                AWSINSTANCEID=`curl -ss http://169.254.169.254/latest/meta-data/instance-id`
+                AWSASG=`aws ec2 describe-tags --region=$AWSREGION --filters Name=resource-type,Values=instance,Name=resource-id,Values=$AWSINSTANCEID | jq -r '.Tags[] | select(.Key == "aws:autoscaling:groupName") | .Value'`
+                function convertUnits {
+                  if [ "$1" == "b" ] ; then echo $2;
+                  elif [ "$1" == "kb" ] ; then echo "$2*1000" | bc | awk '{print $1}' FS=".";
+                  elif [ "$1" == "mb" ] ; then echo "$2*1000*1000" | bc | awk '{print $1}' FS=".";
+                  elif [ "$1" == "gb" ] ; then echo "$2*1000*1000*1000" | bc | awk '{print $1}' FS=".";
+                  elif [ "$1" == "tb" ] ; then echo "$2*1000*1000*1000*1000" | bc | awk '{print $1}' FS=".";
+                  else echo "Unknown unit $1"; exit 1; fi
+                }
+                function getMetric {
+                  if [ "$1" == "Data" ] || [ "$1" == "Metadata" ] ; then echo $(docker info | grep "$1 Space Available" | awk '{print tolower($5), $4}');
+                  else echo "Metric must be either 'Data' or 'Metadata'"; exit 1; fi
+                }
+                data=$(convertUnits `getMetric Data`)
+                aws cloudwatch put-metric-data --namespace EC2 --dimensions InstanceId=$AWSINSTANCEID --value $data --unit Bytes --metric-name DockerAvailableSpace --region $AWSREGION
+                aws cloudwatch put-metric-data --namespace EC2 --dimensions AutoScalingGroup=$AWSASG --value $data --unit Bytes --metric-name DockerAvailableSpace --region $AWSREGION
+                data=$(convertUnits `getMetric Metadata`)
+                aws cloudwatch put-metric-data --namespace EC2 --dimensions InstanceId=$AWSINSTANCEID --value $data --unit Bytes --metric-name DockerMetadataSpace --region $AWSREGION
+                aws cloudwatch put-metric-data --namespace EC2 --dimensions AutoScalingGroup=$AWSASG --value $data --unit Bytes --metric-name DockerMetadataSpace --region $AWSREGION
+              mode: "000755"
           services:
             sysvinit:
               cfn-hup:
