--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -253,6 +253,8 @@ Resources:
                 echo ECS_ENGINE_TASK_CLEANUP_WAIT_DURATION=10m >> /etc/ecs/ecs.config
             02_cloudwatch_disk_usage:
               command: "(crontab -uroot -l 2> /dev/null; echo '* * * * * /root/cwdiskusage.sh') | crontab -u root -"
+            03_fstrim_reclaim_disk:
+              command: "(crontab -uroot -l 2> /dev/null; echo '*/5 * * * * docker ps -qa | xargs docker inspect --format="{{ .State.Pid }}" | xargs -IZ /sbin/fstrim /proc/Z/root/') | crontab -u root -"
           files:
             "/etc/cfn/cfn-hup.conf":
               content: !Sub |
