Also need describe tags

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -159,13 +159,17 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
-        - PolicyName: PutCloudWatchMetricsPolicy
+        - PolicyName: DockerDiskUsagePolicy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
               - Effect: Allow
                 Action:
                   - "cloudwatch:PutMetricData"
+                Resource: "*"
+              - Effect: Allow
+                Action:
+                  - "ec2:DescribeTags"
                 Resource: "*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
