Install NR infrastructure

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -25,6 +25,9 @@ Parameters:
     AllowedValues:
       - Staging
       - Production
+  NewRelicLicenseKey:
+    Type: String
+    Default: ""
   # Application Specific
   AudiogramEcrImageTag:
     Type: String
@@ -133,6 +136,7 @@ Resources:
       Parameters:
         KeyPairName: !Ref AsgKeyPairName
         EnvironmentType: !Ref EnvironmentType
+        NewRelicLicenseKey: !Ref NewRelicLicenseKey
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
