--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -328,9 +328,10 @@ Resources:
             04_set_newrelic_data:
               command: "echo \"display_name: $(curl -ss http://169.254.169.254/latest/meta-data/instance-id)\" >> /etc/newrelic-infra.yml"
             05_install_newrelic_infra:
-              sudo curl -o /etc/yum.repos.d/newrelic-infra.repo https://download.newrelic.com/infrastructure_agent/linux/yum/el/6/x86_64/newrelic-infra.repo
-              sudo yum -q makecache -y --disablerepo='*' --enablerepo='newrelic-infra'
-              sudo yum install newrelic-infra -y
+              command: |
+                sudo curl -o /etc/yum.repos.d/newrelic-infra.repo https://download.newrelic.com/infrastructure_agent/linux/yum/el/6/x86_64/newrelic-infra.repo
+                sudo yum -q makecache -y --disablerepo='*' --enablerepo='newrelic-infra'
+                sudo yum install newrelic-infra -y
           services:
             sysvinit:
               cfn-hup:
