Include template config version in deploy notifications

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -614,6 +614,11 @@ Resources:
         Variables:
           DEPLOY_NOTIFICATION_TOPIC_ARN: !Ref DeployNotificationsSnsTopic
           CD_STACK_NAME: !Ref AWS::StackName
+          INFRASTRUCTURE_CONFIG_BUCKET:
+            Fn::ImportValue:
+              !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+          INFRASTRUCTURE_CONFIG_PRODUCTION_KEY: !Ref InfrastructureConfigProductionKey
+          INFRASTRUCTURE_CONFIG_STAGING_KEY: !Ref InfrastructureConfigStagingKey
       Handler: lambda_function.lambda_handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
