Try undocumented IPv6 support for CloudFront

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -218,6 +218,7 @@ Resources:
         # DefaultRootObject: "index.html"
         Enabled: true
         HttpVersion: http2
+        IsIPV6Enabled: true
         # Logging:
         #   Logging
         Origins:
