Remove fake IPv6 support

--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -218,7 +218,7 @@ Resources:
         # DefaultRootObject: "index.html"
         Enabled: true
         HttpVersion: http2
-        IsIPV6Enabled: true
+        # IsIPV6Enabled: true TODO This is not supported yet
         # Logging:
         #   Logging
         Origins:
