--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -113,7 +113,7 @@ Resources:
       OKActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription: >
-        5XX server errors originating from the ALB exceeded 0
+        5XX server errors originating from the Platform ALB exceeded 0
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: "1"
       MetricName: HTTPCode_ELB_5XX_Count
