Farewell to feeder

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -411,43 +411,43 @@ Resources:
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-application.yml"]]
       TimeoutInMinutes: "5"
   #### FEEDER ##################################################################
-  FeederStack:
-    Type: "AWS::CloudFormation::Stack"
-    DependsOn: ECSClusterStack
-    Properties:
-      NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-      Parameters:
-        VPC: !GetAtt VPCStack.Outputs.VPC
-        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-        VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
-        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
-        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-        OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-        OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-        EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-        SecretsBase:
-            Fn::ImportValue:
-              !Sub "${SecretsStackName}-SecretsBaseRegion"
-        EcrRegion: !Ref EcrRegion
-        EcrImageTag: !Ref FeederEcrImageTag
-        SecretsVersion: !Ref FeederSecretsVersion
-        AppName: "feeder"
-        CreateWorker: "true"
-        ContainerPort: 3000
-        ContainerMemory: 500
-        ContainerCpu: 128
-        HealthCheckPath: "/api/v1"
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-alb-application.yml"]]
-      TimeoutInMinutes: "5"
+  # FeederStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   DependsOn: ECSClusterStack
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #     Parameters:
+  #       VPC: !GetAtt VPCStack.Outputs.VPC
+  #       VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+  #       VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+  #       VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
+  #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+  #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+  #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+  #       OpsDebugMessagesSnsTopicArn:
+  #         Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #       OpsErrorMessagesSnsTopicArn:
+  #         Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+  #       EnvironmentType: !Ref EnvironmentType
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+  #       SecretsBase:
+  #           Fn::ImportValue:
+  #             !Sub "${SecretsStackName}-SecretsBaseRegion"
+  #       EcrRegion: !Ref EcrRegion
+  #       EcrImageTag: !Ref FeederEcrImageTag
+  #       SecretsVersion: !Ref FeederSecretsVersion
+  #       AppName: "feeder"
+  #       CreateWorker: "true"
+  #       ContainerPort: 3000
+  #       ContainerMemory: 500
+  #       ContainerCpu: 128
+  #       HealthCheckPath: "/api/v1"
+  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/web-alb-application.yml"]]
+  #     TimeoutInMinutes: "5"
   #### DOVETAIL ################################################################
   DovetailStack:
     Type: "AWS::CloudFormation::Stack"
@@ -506,9 +506,9 @@ Outputs:
   CrierHostedZoneDNSName:
     Description: Domain name for crier app
     Value: !GetAtt CrierStack.Outputs.HostedZoneDNSName
-  FeederHostedZoneDNSName:
-    Description: Domain name for feeder app
-    Value: !GetAtt FeederStack.Outputs.HostedZoneDNSName
+  # FeederHostedZoneDNSName:
+  #   Description: Domain name for feeder app
+  #   Value: !GetAtt FeederStack.Outputs.HostedZoneDNSName
   DovetailHostedZoneDNSName:
     Description: Domain name for dovetail app
     Value: !GetAtt DovetailStack.Outputs.HostedZoneDNSName
